[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/background.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/tileset.png" type="Texture" id=3]
[ext_resource path="res://src/Actors/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Objects/Coin-bife.tscn" type="PackedScene" id=5]
[ext_resource path="res://sounds/m√∫sica nivel 02.WAV" type="AudioStream" id=6]
[ext_resource path="res://assets/tileset_new.png" type="Texture" id=7]
[ext_resource path="res://src/Objects/Coin-pan.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Objects/Coin-pollo.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Objects/Coin-vacio.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/Objects/Coin-chori.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/Levels/Level1.gd" type="Script" id=12]
[ext_resource path="res://assets/KIdDOS-Regular.otf" type="DynamicFontData" id=13]
[ext_resource path="res://sounds/winlevel.WAV" type="AudioStream" id=14]
[ext_resource path="res://assets/black_backgroud.png" type="Texture" id=15]
[ext_resource path="res://sounds/game_over.WAV" type="AudioStream" id=16]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 27, 0.381836, 27, 19.471, 0, 20 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 27, 0, 27, 20, 0, 20 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0.190796, 4.38557, 50, 4.38557, 50, 13, 0, 13 )

[sub_resource type="TileSet" id=4]
0/name = "tileset_new.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 10, 0, 27, 20 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tileset_new.png 1"
1/texture = ExtResource( 7 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 102, 28, 50, 13 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 3 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 80, 0, 80, 80, 0, 80 )

[sub_resource type="TileSet" id=6]
0/name = "tileset.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 80, 80 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 5 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=8]
size = 100
font_data = ExtResource( 13 )

[node name="LevelTemplate" type="Node2D"]
script = ExtResource( 12 )
__meta__ = {
"_edit_horizontal_guides_": [ 714.0 ],
"_edit_vertical_guides_": [ 3119.0 ]
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -100
scale = Vector2( 0.6, 0.6 )
transform = Transform2D( 0.6, 0, 0, 0.6, 0, 0 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mapa" type="TileMap" parent="."]
visible = false
tile_set = SubResource( 4 )
cell_size = Vector2( 15, 48 )
cell_custom_transform = Transform2D( 64, 1, 1, 64, 0, 0 )
collision_layer = 8
collision_mask = 3
format = 1
tile_data = PoolIntArray( 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 6 )
cell_size = Vector2( 80, 80 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( -196608, 0, 0, -196571, 0, 0, -196570, 0, 0, -131072, 0, 0, -131035, 0, 0, -131034, 0, 0, -65536, 0, 0, -65499, 0, 0, -65498, 0, 0, 0, 0, 0, 37, 0, 0, 38, 0, 0, 65536, 0, 0, 65550, 0, 0, 65552, 0, 0, 65554, 0, 0, 65573, 0, 0, 65574, 0, 0, 131072, 0, 0, 131082, 0, 0, 131083, 0, 0, 131092, 0, 0, 131093, 0, 0, 131109, 0, 0, 131110, 0, 0, 196608, 0, 0, 196631, 0, 0, 196632, 0, 0, 196641, 0, 0, 196642, 0, 0, 196643, 0, 0, 196644, 0, 0, 196645, 0, 0, 196646, 0, 0, 262144, 0, 0, 262171, 0, 0, 262176, 0, 0, 262177, 0, 0, 262178, 0, 0, 262179, 0, 0, 262180, 0, 0, 262181, 0, 0, 262182, 0, 0, 327680, 0, 0, 327695, 0, 0, 327711, 0, 0, 327712, 0, 0, 327713, 0, 0, 327714, 0, 0, 327715, 0, 0, 327716, 0, 0, 327717, 0, 0, 327718, 0, 0, 393216, 0, 0, 393221, 0, 0, 393222, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393246, 0, 0, 393247, 0, 0, 393248, 0, 0, 393249, 0, 0, 393250, 0, 0, 393251, 0, 0, 393252, 0, 0, 393253, 0, 0, 393254, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 0, 458781, 0, 0, 458782, 0, 0, 458783, 0, 0, 458784, 0, 0, 458785, 0, 0, 458786, 0, 0, 458787, 0, 0, 458788, 0, 0, 458789, 0, 0, 458790, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 0, 524321, 0, 0, 524322, 0, 0, 524323, 0, 0, 524324, 0, 0, 524325, 0, 0, 524326, 0, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 165, 203 )
gravity = 1500.0
speed = Vector2( 300, 600 )
stomp_impulse = 500.0

[node name="Camera2D" parent="Player" index="2"]
limit_right = 3120
limit_bottom = 720

[node name="Enemy" parent="." instance=ExtResource( 4 )]
position = Vector2( 2592, 292 )

[node name="Enemy2" parent="." instance=ExtResource( 4 )]
position = Vector2( 2148, 153 )

[node name="Enemy3" parent="." instance=ExtResource( 4 )]
position = Vector2( 715, 544 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="Coin" parent="." instance=ExtResource( 9 )]
position = Vector2( 870, 104.984 )

[node name="Coin2" parent="." instance=ExtResource( 11 )]
position = Vector2( 334, 514.984 )

[node name="Coin3" parent="." instance=ExtResource( 11 )]
position = Vector2( 619, 511.984 )

[node name="Coin4" parent="." instance=ExtResource( 5 )]
position = Vector2( 802, 403.984 )

[node name="Coin5" parent="." instance=ExtResource( 11 )]
position = Vector2( 846, 511.984 )

[node name="Coin6" parent="." instance=ExtResource( 11 )]
position = Vector2( 957, 508.984 )

[node name="Coin7" parent="." instance=ExtResource( 11 )]
position = Vector2( 1233, 338.984 )

[node name="Coin8" parent="." instance=ExtResource( 11 )]
position = Vector2( 1158, 26.9841 )

[node name="Coin9" parent="." instance=ExtResource( 8 )]
position = Vector2( 1334, 418.984 )

[node name="Coin10" parent="." instance=ExtResource( 10 )]
position = Vector2( 2887, 182.984 )

[node name="Coin11" parent="." instance=ExtResource( 11 )]
position = Vector2( 1512, 515 )

[node name="Coin12" parent="." instance=ExtResource( 11 )]
position = Vector2( 1701, 515 )

[node name="Coin13" parent="." instance=ExtResource( 11 )]
position = Vector2( 1921, 515 )

[node name="Coin14" parent="." instance=ExtResource( 11 )]
position = Vector2( 2198, 515 )

[node name="Coin15" parent="." instance=ExtResource( 11 )]
position = Vector2( 2420, 421.984 )

[node name="Coin16" parent="." instance=ExtResource( 11 )]
position = Vector2( 2195, 257.984 )

[node name="Coin17" parent="." instance=ExtResource( 5 )]
position = Vector2( 1921, 179.984 )

[node name="Coin18" parent="." instance=ExtResource( 8 )]
position = Vector2( 1233, 218.984 )

[node name="Coin19" parent="." instance=ExtResource( 10 )]
position = Vector2( 1314, 20.9841 )

[node name="Coin20" parent="." instance=ExtResource( 11 )]
position = Vector2( 1478, 23.9841 )

[node name="OverLayer" type="CanvasLayer" parent="."]

[node name="Recursos" type="Label" parent="OverLayer"]
margin_left = 47.0
margin_top = 24.0
margin_right = 991.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 7 )
text = "Recursos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Win" type="Label" parent="OverLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -50.0
margin_right = 205.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 8 )
text = "¬°GANASTE!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackRect" type="TextureRect" parent="OverLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 15 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VictorySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="DeadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[editable path="Player"]
